k8/nginx-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecosystem-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: backend-service
              servicePort: 8080
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 80
